--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.2"
+    "@types/uuid": "^8.3.4",
+    "express": "^4.17.2",
+    "uuid": "^8.3.2"
   }
 }
